--- a/package.json
+++ b/package.json
@@ -5,6 +5,21 @@
   "main": "server.js",
   "author": "Patrick Fieger patrick.fieger@steinbock.info",
   "devDependencies": {
-    "express": "~4.6.1"
+    "express": "~4.6.1",
+    "escodegen": "^1.6.0",
+    "esprima": "^1.2.2",
+    "grunt": "~0.4.5",
+    "grunt-autoprefixer": "^2.1.0",
+    "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-copy": "^0.7.0",
+    "grunt-contrib-cssmin": "^0.11.0",
+    "grunt-contrib-htmlmin": "^0.3.0",
+    "grunt-contrib-imagemin": "^0.9.2",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-uglify": "~0.5.0",
+    "grunt-html-build": "^0.3.2",
+    "grunt-ngmin": "0.0.3",
+    "grunt-uncss": "^0.3.8",
+    "load-grunt-tasks": "^2.0.0"
   }
 }
